Revert, as this "custom Barchart Base64 class" is now busted on java 1.7+ :) - pretty sure original change was for Trader Android - which can use 1.0.9