@@ -12,9 +12,10 @@ import java.net.URLEncoder;
 import java.nio.CharBuffer;
 import java.nio.charset.Charset;
 
+import javax.xml.bind.DatatypeConverter;
+
 import com.barchart.netty.rest.client.Credentials;
 import com.barchart.netty.rest.client.RestRequest;
-import com.barchart.util.common.encoding.Base64;
 
 public class UsernamePasswordCredentials implements Credentials {
 
@@ -23,8 +24,7 @@ public class UsernamePasswordCredentials implements Credentials {
 	private final String username;
 	private final char[] password;
 
-	public UsernamePasswordCredentials(final String username_,
-			final char[] password_) {
+	public UsernamePasswordCredentials(final String username_, final char[] password_) {
 		username = username_;
 		password = password_;
 	}
@@ -33,23 +33,20 @@ public class UsernamePasswordCredentials implements Credentials {
 	public void authenticate(final RestRequest request) {
 
 		byte[] firstBytes;
+
 		try {
-			firstBytes =
-					(URLEncoder.encode(username, "UTF-8") + ":").getBytes(UTF8);
+			firstBytes = (URLEncoder.encode(username, "UTF-8") + ":").getBytes(UTF8);
 		} catch (final UnsupportedEncodingException e) {
 			firstBytes = (username + ":").getBytes(UTF8);
 		}
 
-		final byte[] secondBytes =
-				UTF8.encode(CharBuffer.wrap(password)).array();
+		final byte[] secondBytes = UTF8.encode(CharBuffer.wrap(password)).array();
 
 		final byte[] concat = new byte[firstBytes.length + secondBytes.length];
 		System.arraycopy(firstBytes, 0, concat, 0, firstBytes.length);
-		System.arraycopy(secondBytes, 0, concat, firstBytes.length,
-				secondBytes.length);
+		System.arraycopy(secondBytes, 0, concat, firstBytes.length, secondBytes.length);
 
-		request.header("Authorization",
-				"Basic " + Base64.decode(concat));
+		request.header("Authorization", "Basic " + DatatypeConverter.printBase64Binary(concat));
 
 	}
 }
